[package]
name = "dazzle"
version = "0.1.0"
authors = ["Chetan Bhasin <chetan.bhasin@jimdo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shiplift = "0.7.0"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"
termion = "1.5.6"
signal-hook = "0.3.8"
